<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20sp"
        android:layout_margin="15sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5sp">

                <TextView
                    android:id="@+id/operation_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:text="@string/operation_name"/>

                <TextView
                    android:id="@+id/operation_sum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/operation_sum"
                    android:textSize="22sp"
                    android:gravity="end"/>

            </LinearLayout>

            <TextView
                android:id="@+id/operation_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:textSize="14sp"
                android:text="@string/operation_description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/operation_category"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/operation_category"
                    android:textSize="12sp"
                    android:layout_gravity="start"/>

                <TextView
                    android:id="@+id/operation_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/operation_date"
                    android:textSize="12sp"
                    android:gravity="end"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>