<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_operation_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/operation_name"
            tools:ignore="TouchTargetSizeCheck"
            android:backgroundTint="@color/Transparent"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <View style="@style/dividerHorizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_operation_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/operation_sum"
            tools:ignore="TouchTargetSizeCheck"
            android:backgroundTint="@color/Transparent"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <View style="@style/dividerHorizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_operation_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/operation_date"
            tools:ignore="TouchTargetSizeCheck"
            android:backgroundTint="@color/Transparent"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <View style="@style/dividerHorizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_operation_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/operation_description"
            tools:ignore="TouchTargetSizeCheck"
            android:backgroundTint="@color/Transparent"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>